Add admin users to all instances via ansible

--- a/terraform/playbooks/main.yml
+++ b/terraform/playbooks/main.yml
@@ -7,7 +7,9 @@
 
 - name: "Run elastic playbook"
   ansible.builtin.import_playbook: installelastic.yml
-    
+
+- name: "Create users"
+  ansible.builtin.import_playbook: generateusers.yml
 
 
 #FINAL PLAYBOOK: Set SSH keys to be not-bootstrap
