--- a/terraform/playbooks/installelastic.yml
+++ b/terraform/playbooks/installelastic.yml
@@ -1,36 +1,20 @@
-- name: Install Elasticsearch
-  hosts: elastic
+- name: Configure Elasticsearch Master
+  hosts: elasticmaster
+  roles:
+    - { role: elasticmaster, es_instance_name: "elasticsearch", es_heap_size: "768M", es_config: {network.host: "_eth0_", http.port: 9200, transport.tcp.port: 9300, node.data: false, node.master: true, bootstrap.mlockall: true } }
   become: true
 
   tasks:
-    - name: Install gnupg2
-      apt:
-        name: gnupg2
-        state: present
+  - name: Install Elastic
+    ansible.builtin.import_playbook: installelastictasks.yml
 
-    - name: Add Elasticsearch GPG key
-      apt_key:
-        url: https://artifacts.elastic.co/GPG-KEY-elasticsearch
-        state: present
 
-    - name: Add Elasticsearch APT repository
-      apt_repository:
-        repo: deb https://artifacts.elastic.co/packages/7.x/apt stable main
-        state: present
+- name: Configure Elasticsearch Data Nodes
+  hosts: elasticdata
+  roles:
+    - { role: elasticdata, es_instance_name: "elasticdata1", es_heap_size: "768M", es_config: {network.host: "_eth0_", discovery.zen.ping.unicast.hosts: "10.10.40.201:9300", http.port: 9200, transport.tcp.port: 9300, node.data: true, node.master: false, bootstrap.mlockall: true } }
+  become: true
 
-    - name: Install Elasticsearch
-      apt:
-        name: elasticsearch
-        state: present
-
-    - name: Start Elasticsearch service
-      service:
-        name: elasticsearch
-        state: started
-        enabled: true
-
-    - name: Add Ansible SSH key
-      authorized_key:
-        user: root
-        key: "{{ lookup('file', '~/.ssh/id_elastic.pub') }}"
-        state: present
+  tasks:
+  - name: Install Elastic
+    ansible.builtin.import_playbook: installelastictasks.yml
