--- a/terraform/playbooks/generateusers.yml
+++ b/terraform/playbooks/generateusers.yml
@@ -4,15 +4,15 @@
   tasks:
     - name: Create ashim user
       user:
-        name: ashim
+        name: cartilage
         shell: /bin/bash
         #placeholder password, MUST ESCAPE $ with \$
-        password: '\$6\$jJMv9ZFl5WQjYijn\$XgsiWLq9KL0brsGjbbiceFZnVTGdqG7MB5HaFSiZCiUjOeVJcLrA/SClwUDy/1GmmOjPtX.X0yzKYesIThvJf.'
+        password: $6$u.uXLWQLGTkfGX59$NGrrqFvYJcv719rYJdK.w5/xiYxX8qYgG9XnuruM2yBtom7LR.ea5U5fQq9X9f/QKWsKWvqmZx4iS3mwpjuQy1'
         state: present
         createhome: yes
         groups: sudo
         append: yes
-    
+
     - name: Deploy ashim ssh key
       authorized_key: user=ashim
         key="{{ lookup('file', '/root/ssh_keys/id_ashim.pub') }}"
@@ -28,7 +28,7 @@
         createhome: yes
         groups: sudo
         append: yes
-    
+
     - name: Deploy gido5731 ssh key
       authorized_key: user=gido5731
         key="{{ lookup('file', '/root/ssh_keys/id_gido5731.pub') }}"
