--- a/terraform/ansible/playbooks/generateusers.yml
+++ b/terraform/ansible/playbooks/generateusers.yml
@@ -4,7 +4,7 @@
   tasks:
     - name: Create ashim user
       user:
-        name: cartilage
+        name: ashim
         shell: /bin/bash
         #placeholder password, MUST ESCAPE $ with \$
         password: $6$u.uXLWQLGTkfGX59$NGrrqFvYJcv719rYJdK.w5/xiYxX8qYgG9XnuruM2yBtom7LR.ea5U5fQq9X9f/QKWsKWvqmZx4iS3mwpjuQy1'
