--- a/terraform/ansible/playbooks/domain_controller.yml
+++ b/terraform/ansible/playbooks/domain_controller.yml
@@ -1,16 +1,48 @@
-- name: win_ping module demo
-  hosts: domain_controller
-  become: false
-  gather_facts: false
+## Do some things
+- hosts: domain_controller
+  gather_facts: True
+  vars_files:
+    - /root/ansible/variables/domain_controller.yml
   tasks:
-    - name: test connection
-      ansible.windows.win_ping:
+  ## source: https://github.com/josehelps/building-a-windows-dc-terraform/blob/master/ansible/roles/windows_domain_controller/tasks/main.yaml
+  - name: Set local admin password
+    ansible.windows.win_user:
+      name: Administrator
+      password: "{{ windows['domain_admin_password'] }}"
+      state: present
 
-- name: create a test file
-  hosts: domain_controller
-  become: true
-  tasks:
-    - name: create a file
-      ansible.windows.win_file:
-        path: C:\helloWorld
-        state: touch
+  - name: features | Installing RSAT AD Admin Center
+    win_feature:
+      name: RSAT-AD-AdminCenter
+      state: present
+
+  - name: features | Installing AD Domain Services
+    win_feature:
+      name: AD-Domain-Services
+      include_management_tools: yes
+      include_sub_features: yes
+      state: present
+
+  - name: Creating a windows domain
+    win_domain:
+      dns_domain_name: "{{ windows['dns_domain_name'] }}"
+      safe_mode_password: "{{ windows['safe_mode_password'] }}"
+
+  - name: Setting DNS Servers
+    win_dns_client:
+      adapter_names: "*"
+      ipv4_addresses: "127.0.0.1"
+
+  - name: reboot | Rebooting Server
+    win_reboot:
+      reboot_timeout_sec: 300
+      shutdown_timeout: 300
+
+  - name: Managing Domain Controller Membership
+    win_domain_controller:
+      dns_domain_name: "{{ windows['dns_domain_name'] }}"
+      domain_admin_user: "{{ windows['domain_admin_user'] }}"
+      domain_admin_password: "{{ windows['domain_admin_password'] }}"
+      safe_mode_password: "{{ windows['safe_mode_password'] }}"
+      state: "{{ windows['state'] }}"
+    register: _windows_domain_controller
