the playbooks create users are only executed for linux users now, because windows doesn't support his syntax

--- a/terraform/ansible/playbooks/generateusers.yml
+++ b/terraform/ansible/playbooks/generateusers.yml
@@ -1,7 +1,7 @@
 # Playbook to generate users for Ashim and I
 ---
 - name: addusers
-  hosts: all, localhost
+  hosts: linux
   tasks:
     - name: Create User for Ashim
       ansible.builtin.user:
