--- a/terraform/ansible/playbooks/domain_controller.yml
+++ b/terraform/ansible/playbooks/domain_controller.yml
@@ -1,9 +1,21 @@
-## Do some things
-- hosts: domain_controller
-  gather_facts: True
+## Install Active Directory on Domain Controller
+- hosts: domain_controllers
+  gather_facts: False
   vars_files:
     - /root/ansible/variables/domain_controller.yml
   tasks:
+  - name: Wait for windows to be bootstrapped for 300 seconds max
+    ansible.builtin.wait_for_connection:
+      delay: 60
+      timeout: 300
+
+  - name: Get Host facts
+    gather_facts:
+      register: facts
+      until: facts is defined
+      retries: 60
+      delay: 10
+
   ## source: https://github.com/josehelps/building-a-windows-dc-terraform/blob/master/ansible/roles/windows_domain_controller/tasks/main.yaml
   - name: Set local admin password
     ansible.windows.win_user:
