domain controller is now using the domain controller role to configure itself

--- a/terraform/ansible/playbooks/domain_controller.yml
+++ b/terraform/ansible/playbooks/domain_controller.yml
@@ -1,84 +1,5 @@
 ## Install Active Directory on Domain Controller
 - hosts: domain_controllers
   gather_facts: False
-  vars_files:
-    - /root/ansible/variables/domain_controller.yml
-  tasks:
-  - name: Wait for windows to be bootstrapped for 300 seconds max
-    ansible.builtin.wait_for_connection:
-      delay: 60
-      timeout: 300
-
-  - name: Get Host facts
-    gather_facts:
-      register: facts
-      until: facts is defined
-      retries: 60
-      delay: 10
-
-  ## source: https://github.com/josehelps/building-a-windows-dc-terraform/blob/master/ansible/roles/windows_domain_controller/tasks/main.yaml
-  - name: Set local admin password
-    ansible.windows.win_user:
-      name: Administrator
-      password: "{{ windows['domain_admin_password'] }}"
-      state: present
-
-  - name: features | Installing RSAT AD Admin Center
-    win_feature:
-      name: RSAT-AD-AdminCenter
-      state: present
-
-  - name: features | Installing AD Domain Services
-    win_feature:
-      name: AD-Domain-Services
-      include_management_tools: yes
-      include_sub_features: yes
-      state: present
-
-  - name: Creating a windows domain
-    win_domain:
-      dns_domain_name: "{{ windows['dns_domain_name'] }}"
-      safe_mode_password: "{{ windows['safe_mode_password'] }}"
-
-  - name: Setting DNS Servers
-    win_dns_client:
-      adapter_names: "*"
-      ipv4_addresses: "127.0.0.1"
-
-  - name: reboot | Rebooting Server
-    win_reboot:
-      reboot_timeout_sec: 600
-      shutdown_timeout: 600
-
-  - name: Managing Domain Controller Membership
-    win_domain_controller:
-      dns_domain_name: "{{ windows['dns_domain_name'] }}"
-      domain_admin_user: "{{ windows['domain_admin_user'] }}"
-      domain_admin_password: "{{ windows['domain_admin_password'] }}"
-      safe_mode_password: "{{ windows['safe_mode_password'] }}"
-      state: "{{ windows['state'] }}"
-    register: _windows_domain_controller
-
-  # Read the CSV file
-  - name: Read DNS records from the CSV file
-    community.general.read_csv:
-      path: /root/ansible/dns/dns_entries.csv
-      fieldnames: Name,Type,Zone,Value
-      delimiter: ','
-    register: dns_entries
-    delegate_to: localhost
-
-  # Add records read from the csv file
-  - name: Add DNS Records
-    community.windows.win_dns_record:
-      name: "{{ item.Name }}"
-      zone: "{{ item.Zone }}"
-      type: "{{ item.Type }}"
-      value: "{{ item.Value }}"
-    loop: "{{ dns_entries.list }}"
-
-  - name: Restart DNS service
-    ansible.windows.win_service:
-      name: DNS
-      state: restarted
-    changed_when: true
+  roles:
+    - domain_controller
