--- a/terraform/ansible/roles/domain_controller/tasks/main.yml
+++ b/terraform/ansible/roles/domain_controller/tasks/main.yml
@@ -1,9 +1,19 @@
 ## source: https://github.com/josehelps/building-a-windows-dc-terraform/blob/master/ansible/roles/windows_domain_controller/tasks/main.yaml
+- name: Wait for windows to be bootstrapped for 300 seconds max
+  ansible.builtin.wait_for_connection:
+    timeout: 300
+
+- name: Get Host facts
+  gather_facts:
+    register: facts
+    until: facts is defined
+    retries: 60
+    delay: 10
 
 - name: Set local admin password
   ansible.windows.win_user:
     name: Administrator
-    password: "{{ windows['domain_admin_password'] }}"
+    password: "{{ domain_admin_password }}"
     state: present
 
 - name: features | Installing RSAT AD Admin Center
@@ -20,8 +30,8 @@
 
 - name: Creating a windows domain
   win_domain:
-    dns_domain_name: "{{ windows['dns_domain_name'] }}"
-    safe_mode_password: "{{ windows['safe_mode_password'] }}"
+    dns_domain_name: "{{ dns_domain_name }}"
+    safe_mode_password: "{{ safe_mode_password }}"
 
 - name: Setting DNS Servers
   win_dns_client:
@@ -35,9 +45,9 @@
 
 - name: Managing Domain Controller Membership
   win_domain_controller:
-    dns_domain_name: "{{ windows['dns_domain_name'] }}"
-    domain_admin_user: "{{ windows['domain_admin_user'] }}"
-    domain_admin_password: "{{ windows['domain_admin_password'] }}"
-    safe_mode_password: "{{ windows['safe_mode_password'] }}"
-    state: "{{ windows['state'] }}"
+    dns_domain_name: "{{ dns_domain_name }}"
+    domain_admin_user: "{{ domain_admin_user }}"
+    domain_admin_password: "{{ domain_admin_password }}"
+    safe_mode_password: "{{ safe_mode_password }}"
+    state: "{{ state }}"
   register: _windows_domain_controller
