Restart rsyslog after configuring

--- a/terraform/ansible/roles/linux/tasks/main.yml
+++ b/terraform/ansible/roles/linux/tasks/main.yml
@@ -3,4 +3,8 @@
   apt:
     name: kitty-terminfo
     state: present
-  
+
+- name: Restart rsyslog
+  ansible.builtin.service:
+    name: "rsyslog"
+    state: restarted
