--- a/terraform/ansible/roles/common_windows/tasks/main.yml
+++ b/terraform/ansible/roles/common_windows/tasks/main.yml
@@ -1,2 +1,5 @@
 - include: installSysmon.yml
   when: ansible_distribution is search ("Microsoft")
+
+- include: installwinlogbeat.yml
+  when: ansible_distribution is search ("Microsoft")
