--- a/terraform/ansible/roles/domain_member/tasks/main.yml
+++ b/terraform/ansible/roles/domain_member/tasks/main.yml
@@ -2,6 +2,7 @@
 
 - name: Wait for windows to be bootstrapped for 300 seconds max
   ansible.builtin.wait_for_connection:
+    delay: 60
     timeout: 300
 
 - name: Get Host facts
