--- a/terraform/ansible/roles/common_windows/files/winlogbeat.yml
+++ b/terraform/ansible/roles/common_windows/files/winlogbeat.yml
@@ -1,3 +1,16 @@
+# ======================== Winlogbeat specific options =========================
+
+# event_logs specifies a list of event logs to monitor as well as any
+# accompanying options. The YAML data type of event_logs is a list of
+# dictionaries.
+#
+# The supported keys are name, id, xml_query, tags, fields, fields_under_root,
+# forwarded, ignore_older, level, event_id, provider, and include_xml.
+# The xml_query key requires an id and must not be used with the name,
+# ignore_older, level, event_id, or provider keys. Please visit the
+# documentation for the complete details of each option.
+# https://go.es.io/WinlogbeatConfig
+
 winlogbeat.event_logs:
   - name: Application
     ignore_older: 72h
