trying out if .yml extension is making it go crazy

--- a/terraform/ansible/roles/common_windows/tasks/installwinlogbeat.yml
+++ b/terraform/ansible/roles/common_windows/tasks/installwinlogbeat.yml
@@ -13,7 +13,7 @@
 
 - name: Copy files
   copy:
-    src: winlogbeat.yml
+    src: winlogbeat.config
     dest: C:\winlogbeat\winlogbeat.yml
 
 - name: Configure Winlogbeat
