--- a/terraform/ansible/roles/common_windows/files/winlogbeat.config
+++ b/terraform/ansible/roles/common_windows/files/winlogbeat.config
@@ -22,14 +22,14 @@ winlogbeat.event_logs:
       - script:
           lang: javascript
           id: security
-          file: ${path.home}/module/security/config/winlogbeat-security.js
+          file: C:/winlogbeat/winlogbeat-7.17.15-windows-x86_64/module/security/config/winlogbeat-security.js
 
   - name: Microsoft-Windows-Sysmon/Operational
     processors:
       - script:
           lang: javascript
           id: sysmon
-          file: ${path.home}/module/sysmon/config/winlogbeat-sysmon.js
+          file: C:/winlogbeat/winlogbeat-7.17.15-windows-x86_64/module/sysmon/config/winlogbeat-sysmon.js
 
   - name: Windows PowerShell
     event_id: 400, 403, 600, 800
@@ -37,7 +37,7 @@ winlogbeat.event_logs:
       - script:
           lang: javascript
           id: powershell
-          file: ${path.home}/module/powershell/config/winlogbeat-powershell.js
+          file: C:/winlogbeat/winlogbeat-7.17.15-windows-x86_64/module/powershell/config/winlogbeat-powershell.js
 
   - name: Microsoft-Windows-PowerShell/Operational
     event_id: 4103, 4104, 4105, 4106
@@ -45,7 +45,7 @@ winlogbeat.event_logs:
       - script:
           lang: javascript
           id: powershell
-          file: ${path.home}/module/powershell/config/winlogbeat-powershell.js
+          file: C:/winlogbeat/winlogbeat-7.17.15-windows-x86_64/module/powershell/config/winlogbeat-powershell.js
 
   - name: ForwardedEvents
     tags: [forwarded]
@@ -54,22 +54,22 @@ winlogbeat.event_logs:
           when.equals.winlog.channel: Security
           lang: javascript
           id: security
-          file: ${path.home}/module/security/config/winlogbeat-security.js
+          file: C:/winlogbeat/winlogbeat-7.17.15-windows-x86_64/module/security/config/winlogbeat-security.js
       - script:
           when.equals.winlog.channel: Microsoft-Windows-Sysmon/Operational
           lang: javascript
           id: sysmon
-          file: ${path.home}/module/sysmon/config/winlogbeat-sysmon.js
+          file: C:/winlogbeat/winlogbeat-7.17.15-windows-x86_64/module/sysmon/config/winlogbeat-sysmon.js
       - script:
           when.equals.winlog.channel: Windows PowerShell
           lang: javascript
           id: powershell
-          file: ${path.home}/module/powershell/config/winlogbeat-powershell.js
+          file: C:/winlogbeat/winlogbeat-7.17.15-windows-x86_64/module/powershell/config/winlogbeat-powershell.js
       - script:
           when.equals.winlog.channel: Microsoft-Windows-PowerShell/Operational
           lang: javascript
           id: powershell
-          file: ${path.home}/module/powershell/config/winlogbeat-powershell.js
+          file: C:/winlogbeat/winlogbeat-7.17.15-windows-x86_64/module/powershell/config/winlogbeat-powershell.js
 
 # ================================== Outputs ===================================
 
