--- a/terraform/ansible/roles/common_windows/tasks/installwinlogbeat.yml
+++ b/terraform/ansible/roles/common_windows/tasks/installwinlogbeat.yml
@@ -14,10 +14,10 @@
 - name: Copy files
   copy:
     src: winlogbeat.config
-    dest: C:\winlogbeat\winlogbeat.yml
+    dest: C:/winlogbeat/winlogbeat-7.17.15-windows-x86_64/winlogbeat.yml
 
 - name: Configure Winlogbeat
-  win_shell: PowerShell.exe -ExecutionPolicy UnRestricted -File C:\winlogbeat\install-service-winlogbeat.ps1
+  win_shell: PowerShell.exe -ExecutionPolicy UnRestricted -File C:/winlogbeat/winlogbeat-7.17.15-windows-x86_64/install-service-winlogbeat.ps1
 
   args:
     executable: powershell.exe
@@ -27,11 +27,3 @@
 
   args:
     executable: powershell.exe
-# - name: Copy files
-#   copy:
-#     src: "{{ item.src }}"
-#     dest: "{{ item.dest }}"
-#   with_items:
-#     - { src: "files/winlogbeat.yml", dest: 'C:\winlogbeat\winlogbeat.yml' }
-#     # Add more files as needed
-
