--- a/terraform/ansible/inventory/hosts.yaml
+++ b/terraform/ansible/inventory/hosts.yaml
@@ -27,3 +27,8 @@ domain_members:
 
     elan-winsrv-01:
       ansible_host: 10.10.20.16
+
+dns_server:
+  hosts:
+    elan-winsrv-01:
+      ansible_host: 10.10.20.32
