- Statically adding DNS records - DC is the main DNS - Using microsoft ad collection instead of community ones - Create a domain servers role that ensure domain membership for the servers

--- a/terraform/ansible/inventory/hosts.yaml
+++ b/terraform/ansible/inventory/hosts.yaml
@@ -25,10 +25,7 @@ domain_members:
     elan-winhost-01:
       ansible_host: 10.10.20.32
 
-    elan-winsrv-01:
-      ansible_host: 10.10.20.16
-
-dns_server:
+domain_servers:
   hosts:
     elan-winsrv-01:
-      ansible_host: 10.10.20.32
+      ansible_host: 10.10.20.16
