--- a/terraform/ansible/roles/domain_controller/tasks/main.yml
+++ b/terraform/ansible/roles/domain_controller/tasks/main.yml
@@ -1,53 +1,3 @@
-## source: https://github.com/josehelps/building-a-windows-dc-terraform/blob/master/ansible/roles/windows_domain_controller/tasks/main.yaml
-- name: Wait for windows to be bootstrapped for 300 seconds max
-  ansible.builtin.wait_for_connection:
-    timeout: 300
+- import_tasks: install_ad.yml
 
-- name: Get Host facts
-  gather_facts:
-    register: facts
-    until: facts is defined
-    retries: 60
-    delay: 10
-
-- name: Set local admin password
-  ansible.windows.win_user:
-    name: Administrator
-    password: "{{ domain_admin_password }}"
-    state: present
-
-- name: features | Installing RSAT AD Admin Center
-  win_feature:
-    name: RSAT-AD-AdminCenter
-    state: present
-
-- name: features | Installing AD Domain Services
-  win_feature:
-    name: AD-Domain-Services
-    include_management_tools: yes
-    include_sub_features: yes
-    state: present
-
-- name: Creating a windows domain
-  win_domain:
-    dns_domain_name: "{{ dns_domain_name }}"
-    safe_mode_password: "{{ safe_mode_password }}"
-
-- name: Setting DNS Servers
-  win_dns_client:
-    adapter_names: "*"
-    ipv4_addresses: "127.0.0.1"
-
-- name: reboot | Rebooting Server
-  win_reboot:
-    reboot_timeout_sec: 300
-    shutdown_timeout: 300
-
-- name: Managing Domain Controller Membership
-  win_domain_controller:
-    dns_domain_name: "{{ dns_domain_name }}"
-    domain_admin_user: "{{ domain_admin_user }}"
-    domain_admin_password: "{{ domain_admin_password }}"
-    safe_mode_password: "{{ safe_mode_password }}"
-    state: "{{ state }}"
-  register: _windows_domain_controller
+- import_tasks: install_dns.yml
